<resources>
    <string name="app_name">Activity Tracker</string>
    <string name="nav_header_title">Activity Tracker</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_train">Train</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>

    <string name="history_placeholder">Under construction</string>

    <!-- TrainView Strings -->
    <string name="mode_text">Current activity: </string>

    <string name="training_error">Could not start training, check connection to sensor</string>

    <string name="training_stopped">Training stopped</string>
    <string name="timer_description">Training time</string>
    <string name="timer_default">00:00:00</string>

    <string name="heading_label">Heading: </string>
    <string name="pitch_label">Pitch: </string>
    <string name="roll_label">Roll: </string>
    <string name="yaw_label">Yaw: </string>
    <string name="defaultValue">0</string>

    <!-- TrainView Strings -->

    <!-- SettingsView Strings -->
    <string name="logoutButton">Logout</string>

    <string name="serverSectionLabel">Server</string>
    <string name="userSectionLabel">User</string>
    <string name="sensorSectionLabel">Sensor</string>

    <string name="ipLabel">Server IP: </string>
    <string name="defaultIp">10.0.2.2</string>
    <string name="portLabel">Server port:</string>
    <string name="defaultPort">5242</string>

    <string name="deviceLabel">Device: </string>

    <string name="userNameLabel">Username: </string>
    <string name="defaultUserName">placeholder</string>
    <string name="passwordLabel">Password: </string>
    <string name="passwordPlaceholder">placeholder</string>
    <!-- SettingsView Strings -->

    <!-- Login Activity Strings -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="disconnectedInfo">Sensor disconnected</string>
    <string name="permissionError">Could not acquire bluetooth permissions. Try granting them manually</string>
    <string name="connectedFailure">Failed connecting to sensor</string>
    <string name="connectedInfo">Connected to sensor</string>
    <string name="please_select_device">Please select device</string>
    <!-- Login Activity Strings -->

    <string name="refreshButton">Refresh</string>


    <string name="deviceUnreachable">Selected device is unreachable. Could not connect</string>
    <string name="connectivty_issue">Could not reach bluetooth adapter, please check device settings</string>
    <string name="bt_disabled">Bluetooth is dissabled, cannot continue</string>
    <string-array name="available_activities">
        <item>Jumping Jack</item>
    </string-array>


</resources>