<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_train">

    <fragment
        android:id="@+id/nav_train"
        android:name="com.pwr.activitytracker.ui.train.TrainFragment"
        android:label="@string/menu_train"
        tools:layout="@layout/fragment_train" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.pwr.activitytracker.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.pwr.activitytracker.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>